Changes towards version 0.7:
- Introduce the concept of an "InputContext" - SvdB
- Don't use alloca() in uio. - SvdB
- Replace PlayerOne/PlayerTwo by PlayerControls[0]/PlayerControls[1] - SvdB
- Moved comm resources into starcon.ls2 - Michael
- Repackaged static comm/ship data to it all uniquely named - Michael
- On MacOS X, search for the content in the application bundle, from Nic
- Planetside resource names are now consistent and generatable - Michael
- Androsynth ruins freeing condition now uses cycles (Bug #1028) - Michael
- .rmp files now carry the types of the targets - Michael
- Joystick threshold defaults to 10,000, not 0 (Bug #1046) - Michael
- Remove MEM_HANDLEs from everywhere outside of memlib - Michael
- Split out RESOURCEs from the loaded data in RACE_DESC and LOCDATA
  structures - Michael
- Prevent overflow for planet weight when scanning a planet (bug #1025)
  - from Benjamin Alan Weaver
- Don't set _POSIX_THREAD_SAFE_FUNCTIONS - SvdB
- Support for Windows CE. - SvdB with Pavel Chernikov
- Added support to the unix build system for explicitely specifying the name
  of the define to set to show when a symbol is found.
  Also a fix for when 'strcasecmp' is #define'd by the system. - SvdB
- Rewrote mapres.c to use uio's hashtables instead of its own
  association lists - Michael
- Added a Remix option to the setup menu - Michael
- Addon zips can live in content/addons directly - Michael
- 3DO music separated into an addon pack - Michael
- Major change in resource index scheme - Michael
  - .lst replaced (mapping to IDs instead of to files)
  - .rmp files give the mapping from IDs to files. 
  - Addons provide additional files instead of overriding UIO
  - Addons must provide .rmp files to do the necessary overrides.
- Removed unnecessary _ALIGNED_ON macro usage - SvdB
- The current directory is now among the locations searched for the content
  when no explicit location has been specified. (bug fix) - from Nic